--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -345,3 +345,19 @@ p.light {
 		padding: 0;
 	}
 }
+
+.toContentLink {
+	padding: 2ex;
+	position: absolute;
+	right: 101%;
+	overflow: hidden;
+}
+
+.toContentLink:focus {
+	position: initial;
+	text-align: center;
+	background: $dark-blue;
+	color: white;
+	display: block;
+}
+
