--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -7,3 +7,19 @@
 
 @import 'settings/settings';
 @import 'mixins/palette';
+
+.toContentLink {
+	padding: 2ex;
+	position: absolute;
+	right: 101%;
+	overflow: hidden;
+}
+
+.toContentLink:focus {
+	position: initial;
+	text-align: center;
+	background: $white;
+	display: block;
+	text-decoration: underline;
+	border: 4px solid darken($grey, 24%);
+}
