--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -8,18 +8,18 @@
 @import 'settings/settings';
 @import 'mixins/palette';
 
-.toContentLink {
-	padding: 2ex;
+.jump-to-content {
+	display: block;
+	background: $white;
 	position: absolute;
-	right: 101%;
 	overflow: hidden;
+	text-align: center;
+	height: 0;
 }
 
-.toContentLink:focus {
+.jump-to-content:focus {
 	position: initial;
-	text-align: center;
-	background: $white;
-	display: block;
-	text-decoration: underline;
 	border: 4px solid darken($grey, 24%);
+	padding: $space-2;
+	height: auto;
 }
