Indentation on nav content h3 h4

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -23,3 +23,11 @@
 	padding: $space-2;
 	height: auto;
 }
+
+.content-nav__level_h3 {
+	margin-left: 1.2ex;
+}
+
+.content-nav__level_h4 {
+	margin-left: 2.4ex;
+}
