--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -24,12 +24,14 @@
 	height: auto;
 }
 
-.headline__focused {
-	animation-name: flash-animation;
-	animation-duration: 2s;
+.content-highlight {
+	animation-name: content-hightlight-animation;
+	animation-duration: 1.5s;
+	animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+	animation-iteration-count: 1;
 }
 
-@keyframes flash-animation {
+@keyframes content-hightlight-animation {
 	0% { background: $blue; }
-	100% { background: default; }
+	100% { background: none; }
 }
