--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -33,3 +33,65 @@
 	0% { background: $blue; }
 	100% { background: default; }
 }
+
+@media screen and (min-width: 769px) {
+	.content-nav__head {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.content-nav__head {
+		display: block;
+		padding-left: 2ex;
+	}
+
+	.content-nav__toggle-container {
+		float: right;
+		padding-right: 1em;
+		padding-bottom: 1em;
+		font-weight: bold;
+		font-size: 150%;
+	}
+
+	.content-nav-container {
+		width: 100%;
+		background-color: $light-yellow;
+		position: fixed;
+		top: 0;
+		left: 0;
+		box-shadow: 2px 5px 5px grey;
+	}
+
+	.content-nav__page-name {
+		font-size: 80%;
+	}
+
+	.content-nav__currently-active {
+		font-weight: bold;
+	}
+
+	.content-nav__item {
+		padding-top: 1ex;
+		padding-bottom: 1ex;
+		padding-left: 2ex;
+		border-bottom: 1px solid $grey;
+		border-left: 0;
+	}
+
+	.content-nav__item.active {
+		background-color: whitesmoke;
+	}
+
+	.content-nav__level_h3 {
+		padding-left: 4ex;
+	}
+
+	.content-nav__level_h4 {
+		padding-left: 6ex;
+	}
+
+	.content-nav h4 {
+		display: none;
+	}
+}
