Issues with scrolling and resizing fixed w content nav

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -62,6 +62,10 @@
 		height: 1ex;
 	}
 
+	.content-nav {
+		display: none;
+	}
+
 	.content-nav-container {
 		width: 100%;
 		background-color: $light-yellow;
