--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -1,6 +1,6 @@
 /**
  *  The following imports are manually copied from the component library.
- *  It's probably a good idea to only add things that do not compile, like variables and mixins.
+ *  Do not add styles or imports that compile to actual CSS.
  *. https://github.com/RegionHalland/styleguide/
  *
 **/
@@ -36,55 +36,17 @@
 	100% { background: none; }
 }
 
-.cookie-notice__button {
-	padding: 1.5ex;
-	font-size: 80%;
-}
+.cookie-notice__container {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
 
-.cookie-notice__text {
-	font-size: 80%;
-}
-
-.cookie-notice__text a {
-	text-decoration: underline;
-}
-
-.background-light-blue {
-	background-color: $light-blue;
-}
-
-.cookie-notice__column {
-	float: left;
-}
-
-.cookie-notice__column-left {
-	width: 10%;
-	text-align: right;
-	padding-right: 2ex;
-}
-
-.cookie-notice__column-center {
-	width: 70%;
-}
-
-.cookie-notice__column-right {
-	width: 19%;
-}
-
-@media screen AND (max-width: 768px) {
-	.cookie-notice__column-left {
-		width: 15%;
-		text-align: right;
-		padding-right: 2ex;
-	}
-
-	.cookie-notice__column-center {
-		width: 85%;
-	}
-
-	.cookie-notice__column-right {
-		width: 100%;
-		text-align: center;
-		padding-top: 1ex;
+	@media screen and (min-width: $breakpoint-sm) {
+		flex-wrap: nowrap;
 	}
 }
+
+.cookie-notice__btn-container {
+	flex: 1 0 auto;
+}
+
