add open/close methods

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -53,7 +53,11 @@
 }
 
 .content-nav__list {
-	//display: none;
+	display: none;
+
+	&.open {
+		display: block;
+	}
 
 	@media screen and (min-width: $breakpoint-md) {
 		display: block;
