--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -91,3 +91,10 @@
 	height: 22px;
 }
 
+.frontpage_nav {
+	padding: $space-4 $space-3 $space-4 $space-3;
+
+	@media screen and (min-width: $breakpoint-sm) {
+		padding: $space-4 $space-5 $space-4 $space-5;
+	}
+}
