Switching name in hope of reuse

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -91,7 +91,7 @@
 	height: 22px;
 }
 
-.frontpage_nav {
+.mobile-friendly-padding {
 	padding: $space-4 $space-3 $space-4 $space-3;
 
 	@media screen and (min-width: $breakpoint-sm) {
