Footer: text centered on mobile with temp module

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -98,3 +98,11 @@
 		padding: $space-4 $space-5 $space-4 $space-5;
 	}
 }
+
+.new_footer {
+	text-align: center;
+
+	@media screen and (min-width: $breakpoint-sm) {
+		text-align: left;
+	}
+}
