--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -126,3 +126,303 @@
 .single-page-breadcrumbs a {
 	color: white;
 }
+
+.rh-site-nav {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	background: $white;
+	box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.03), 0 0 0 1px rgba(231, 231, 231, 0.5);
+	position: relative;
+	z-index: $z4;
+}
+
+.rh-site-nav__top {
+	position: relative;
+	z-index: $z4;
+	width: 100%;
+	background-color: $white;
+	border-bottom: 1px solid palette(grey, light);
+	padding: $space-2 $space-3;
+}
+
+.rh-site-nav__description {
+	margin-left: $space-2;
+
+	&::before {
+		content: '|';
+		margin-right: $space-2;
+	}
+}
+
+.rh-site-nav__menu-btn {
+	display: block;
+}
+
+.rh-site-nav__bottom {
+	position: relative;
+	z-index: $z4;
+	width: 100%;
+	background-color: $white;
+}
+
+.rh-site-nav__container {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	width: 100%;
+
+	@media screen and (min-width: $breakpoint-md) {
+		max-width: $container-max-width;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+
+.rh-site-nav__list {
+	display: none;
+	flex-wrap: wrap;
+	width: 100%;
+
+	@media screen and (min-width: $breakpoint-md) {
+		width: 35%;
+	}
+
+	&.rh-open {
+		display: flex;
+	}
+}
+
+.rh-site-nav__item {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	padding-left: $space-3;
+	border-bottom: 1px solid palette(grey, light);
+
+	&:last-of-type {
+		padding-right: 0;
+	}
+}
+
+.rh-site-nav__link {
+	display: block;
+	width: 100%;
+	color: palette(black, base);
+	position: relative;
+	overflow: hidden;
+	font-weight: $bold-font-weight;
+	padding: $space-3;
+
+	@media screen and (min-width: $breakpoint-md) {
+		padding: $space-3 0;
+		display: inherit;
+		font-size: 0.88889rem; // 16px
+
+		&::after {
+			content: '';
+			display: block;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			border-bottom: 5px solid palette(blue, base);
+			border-radius: 1px 1px 0 0;
+			transform: translateY(100%);
+			transition: transform 0.1s ease-in-out;
+		}
+
+		&.rh-active {
+			&::after {
+				content: '';
+				border-bottom: 5px solid palette(dark-blue, base);
+				transform: translateY(0);
+			}
+		}
+
+		&.rh-open {
+			color: rgba($black, 1);
+
+			&::after {
+				content: '';
+				border-bottom: 5px solid palette(dark-blue, base);
+				transform: translateY(0);
+			}
+		}
+
+		&.rh-active.rh-open-sibling {
+			&::after {
+				content: '';
+				border-bottom: none;
+			}
+		}
+
+		&:hover {
+			color: rgba($black, 1);
+
+			&::after {
+				transform: translateY(0);
+			}
+		}
+	}
+}
+
+.rh-dropdown {
+	display: none;
+	width: 100%;
+	z-index: $z4;
+
+	&.rh-open {
+		display: flex;
+	}
+}
+
+.rh-dropdown__list {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+}
+
+.rh-dropdown__item {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	border-bottom: 1px solid palette(grey, light);
+}
+
+.rh-dropdown__link {
+	display: block;
+	width: 100%;
+	padding: $space-3;
+	color: palette(black, base);
+
+	&:hover,
+	&:active,
+	&:focus {
+		color: palette(dark-blue, dark);
+	}
+}
+
+.rh-dropdown__link-description {
+	display: none;
+
+	@media screen and (min-width: $breakpoint-md) {
+		display: block;
+		font-size: $h5;
+		font-style: italic;
+		color: palette(grey, x-dark);
+	}
+}
+
+.rh-dropdown__close {
+	display: none;
+
+	@media screen and (min-width: $breakpoint-md) {
+		display: block;
+		position: absolute;
+		right: $space-3;
+		bottom: $space-3;
+	}
+}
+
+// .dropdown__see-all {
+// 	display: block;
+// 	width: 100%;
+// 	clear: both;
+
+// 	@media screen and (min-width: $breakpoint-md) {
+// 		width: 100%;
+// 		float: none;
+// 	}
+// }
+
+// .dropdown__see-all-btn {
+// 	display: block;
+// 	padding: $space-3;
+// 	font-weight: $bold-font-weight;
+
+// 	@media screen and (min-width: $breakpoint-md) {
+// 		padding: 0;
+// 	}
+// }
+
+.rh-site-nav__overlay {
+	display: none;
+	background-color: palette($black, base);
+	pointer-events: none;
+	opacity: 0.8;
+	transition: opacity 0.1s ease-in-out;
+	z-index: $z3;
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	top: 0;
+	left: 0;
+}
+
+.rh-site-nav.rh-open {
+	.rh-site-nav__overlay {
+		@media screen and (min-width: $breakpoint-md) {
+			display: block;
+			pointer-events: auto;
+		}
+
+		&:hover {
+			opacity: 0.9;
+		}
+	}
+}
+
+// Section nav
+.rh-section-header {
+	background: rgba($blue, 0.1);
+	padding: $space-4 0 0 0;
+}
+
+.rh-section-header__title {
+	margin-bottom: $space-3;
+}
+
+.rh-section-nav__list {
+	display: flex;
+	width: 100%;
+	overflow-x: scroll;
+	overflow-y: hidden;
+}
+
+// .section-nav__item {
+// 	margin-right: $space-3;
+// }
+
+.rh-section-nav__link {
+	display: block;
+	position: relative;
+	padding: $space-3 0;
+	font-weight: $bold-font-weight;
+
+	&::after {
+		content: '';
+		display: block;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		border-bottom: 5px solid $blue;
+		border-radius: 1px 1px 0 0;
+		transform: translateY(100%);
+		transition: transform 0.1s ease-in-out;
+	}
+
+	&.rh-active {
+		&::after {
+			border-bottom: 5px solid palette(dark-blue, base);
+			transform: translateY(0);
+		}
+	}
+
+	&:hover {
+		&::after {
+			transform: translateY(0);
+		}
+	}
+}
