--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -14,6 +14,15 @@
 	display: none;
 }
 
+.visually-hidden {
+	display: block;
+	background: $white;
+	position: absolute;
+	overflow: hidden;
+	text-align: center;
+	height: 0;
+}
+
 .jump-to-content {
 	display: block;
 	background: $white;
